--- a/boot-camp/practice/April/day31/node/package.json
+++ b/boot-camp/practice/April/day31/node/package.json
@@ -4,12 +4,29 @@
   "description": "",
   "main": "10_app.js",
   "scripts": {
-    "test": "node 10_app.js"
+    "test": "NODE_ENV=test node 11_app_mysql.js",
+    "prod": "NODE_ENV=prod node 11_app_mysql.js"
   },
   "author": "ding-co",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
+    "cheerio": "^1.0.0-rc.10",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mysql": "^2.18.1"
+    "express-session": "^1.17.2",
+    "ics": "^2.35.0",
+    "mime": "^3.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "mysql": "^2.18.1",
+    "node-html-parser": "^5.3.3",
+    "nodemailer": "^6.7.3",
+    "rotating-file-stream": "^3.0.3",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
