--- a/boot-camp/practice/April/day31/node/package.json
+++ b/boot-camp/practice/April/day31/node/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
@@ -21,10 +22,13 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.0",
     "node-html-parser": "^5.3.3",
     "nodemailer": "^6.7.3",
     "rotating-file-stream": "^3.0.3",
-    "xlsx": "^0.18.5"
+    "socket.io": "^4.4.1",
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
