--- a/boot-camp/practice/April/day31/node/package.json
+++ b/boot-camp/practice/April/day31/node/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "10_app.js",
   "scripts": {
-    "test": "NODE_ENV=test node 11_app_mysql.js",
-    "prod": "NODE_ENV=prod node 11_app_mysql.js"
+    "test": "cross-env NODE_ENV=test node 11_app_mysql.js",
+    "prod": "cross-env NODE_ENV=prod node 11_app_mysql.js"
   },
   "author": "ding-co",
   "license": "ISC",
@@ -14,11 +14,14 @@
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "ics": "^2.35.0",
     "mime": "^3.0.0",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
@@ -27,6 +30,7 @@
     "nodemailer": "^6.7.3",
     "rotating-file-stream": "^3.0.3",
     "socket.io": "^4.4.1",
+    "uuid-apikey": "^1.5.3",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   },
