--- a/boot-camp/practice/April/day36/project/server/package.json
+++ b/boot-camp/practice/April/day36/project/server/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
